<resources>
    <string name="app_name">SportSpaceApp</string>
    //Vista Login
    <string name="txtInicioSesion">Inicio de Sesión</string>
    <string name="editMail">Correo</string>
    <string name="editPass">Contraseña</string>
    <string name="checkVer">Ver</string>
    <string name="btnInicio">Inicio</string>
    <string name="btnRegistro">Registro</string>
    //Vista Registro
    <string name="txtRegistro">Registro</string>
    <string name="editNombre">Nombre</string>
    <string name="editApellido1">Primer Apellido</string>
    <string name="editApellido2">Segundo Apellido</string>
    <string name="editCorreo">Correo</string>
    <string name="editFechaNac">Fecha de Nacimiento</string>
    <string name="editPassword">Contraseña</string>
    <string name="checkVer2">Ver</string>
    <string name="editPassword2">Repite Contraseña</string>

    //Vista Inicio
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="inicio">Inicio</string>
    <string name="reservas">Reservas</string>
    <string name="equipos">Equipos</string>
    <string name="perfil">Perfil</string>

    //Vista Centro
    <string name="centro">Centro Deportivo Municipal </string>

    //Spinner
    <string name="spn1">Nombre</string>
    <string name="spn2">Deporte</string>
    <string name="spn3">Localizacion</string>

    <string name="txtIncio">Inicio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>