<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Presentacion.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="118dp"
        android:layout_marginBottom="73dp"
        android:text="@string/txtInicioSesion"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ed_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="331dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/editMail"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxShowPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/ed_pass"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="109dp"
        android:ems="10"
        android:hint="@string/editPass"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxShowPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ed_email" />

    <Button
        android:id="@+id/button"
        android:layout_width="331dp"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:onClick="ToIniciarSesion"
        android:text="@string/btnInicio"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxShowPassword" />

    <Button
        android:id="@+id/button2"
        android:layout_width="331dp"
        android:layout_height="0dp"
        android:layout_marginBottom="305dp"
        android:onClick="toRegistro"
        android:text="@string/btnRegistro"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <CheckBox
        android:id="@+id/checkBoxShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="39dp"
        android:text="@string/checkVer2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ed_pass"
        app:layout_constraintTop_toBottomOf="@+id/ed_email" />

</androidx.constraintlayout.widget.ConstraintLayout>