<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/fondo_gris"
    tools:context="Presentacion.RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            style="@style/TitulosGenericos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/audiowide"
            android:gravity="center"
            android:text="@string/txtRegistro"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:hint="@string/editNombre"
                app:boxStrokeColor="#CFD8DC"
                app:hintTextColor="#CFD8DC"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="#CFD8DC">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#CFD8DC"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:hint="@string/editApellido1"
                app:boxStrokeColor="#CFD8DC"
                app:hintTextColor="#CFD8DC"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="#CFD8DC">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_ape1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#CFD8DC"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:hint="@string/editApellido2"
                app:boxStrokeColor="#CFD8DC"
                app:hintTextColor="#CFD8DC"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="#CFD8DC">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_ape2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#CFD8DC"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:hint="@string/editFechaNac"
                app:boxStrokeColor="#CFD8DC"
                app:hintTextColor="#CFD8DC"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="#CFD8DC">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_fechNac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#CFD8DC"
                    android:inputType="date"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:hint="@string/editCorreo"
                app:boxStrokeColor="#CFD8DC"
                app:hintTextColor="#CFD8DC"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="#CFD8DC">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#CFD8DC"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:hint="@string/editPass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true"
                app:boxStrokeColor="#CFD8DC"
                app:hintTextColor="#CFD8DC"
                android:textColorHint="#CFD8DC">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#CFD8DC"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:hint="@string/editPassword2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true"
                app:boxStrokeColor="#CFD8DC"
                app:hintTextColor="#CFD8DC"
                android:textColorHint="#CFD8DC">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_pass2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#CFD8DC"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/btnRegistro"
                android:textColor="#455A64"
                android:textSize="25dp"
                android:onClick="Registrar"
                app:backgroundTint="#FFC107"></Button>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtCuentaYaCreada"
                android:textColor="#CFD8DC"
                android:textSize="15dp"
                android:id="@+id/TextYaRegistrado"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtInicioSesion"
                android:fontFamily="@font/amiko_bold"
                android:textSize="25dp"
                android:textColor="#455A64"
                android:onClick="toInicio"
                android:id="@+id/button4"
                app:backgroundTint="#CFD8DC"></Button>


        </LinearLayout>

    </LinearLayout>

</ScrollView>